# PDFClassification

./: README.md  main.py  pyproject.toml
src/: functions.py
