[project]
name = "classifier-assignment"
version = "0.1.0"
description = "Classifier"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
   "fastapi>=0.115.12",
   "hf-xet>=1.1.9",
   "numpy>=2.3.3",
   "pillow>=11.3.0",
   "pymupdf>=1.26.4",
   "pytesseract>=0.3.13",
   "python-multipart>=0.0.20",
   "torch>=2.8.0",
   "transformers>=4.56.1",
   "uvicorn>=0.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.11.5",
]
